update source code.

--- a/source/_posts/idea/远控模块.md
+++ b/source/_posts/idea/远控模块.md
@@ -2,14 +2,12 @@
 
 ## 软件
 
-### 8266驱动
-
-### MQTT协议移植
-
 ### zephyr
 
+- 8266驱动
+- MQTT协议移植
 - thread1 : MQTT 接收事件
-- thread2：MQTT 接收事件
+- thread2：MQTT 发送事件
 - 用户APP功能自定义
 
 ## 硬件
